--- a/Website/index.html
+++ b/Website/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Bernardo Teisceira</h1>
+        <h1>Bernardo Teisceira from ECS</h1>
         <div class="contact-info">
             <a href="mailto:bteisceira@gmail.com">bteisceira@gmail.com</a>
             <a href="https://github.com/bertei">GitHub</a>
